# Minister

./: .dockerignore  .env.example  .gitignore  .prettierignore  AUDIT.md  CLAUDE.md  DESIGNDECISIONS.md  README.md  TODO.md  docker-compose.yml  oauth.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: build-image.yml  build-tlsn-images.yml  ci.yml
apps/demo-client/: .env.example  eslint.config.mjs  package.json
apps/demo-client/src/: auth.ts
apps/demo-client/src/app/: globals.css  layout.tsx  page.tsx
apps/demo-client/src/lib/: vc.ts
apps/extension/: README.md  build.mjs  manifest.json  package.json  tsconfig.json
apps/extension/src/: background.ts  config.ts  encoding.test.ts  encoding.ts  messages.ts  offscreen.html  offscreen.ts  popup.html  popup.ts
apps/minister/: .env.example  Dockerfile  Dockerfile.prod  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts
apps/minister/e2e/: account.spec.ts  admin.spec.ts  auth.setup.ts  auth.spec.ts  badges.spec.ts  email-badges.spec.ts  env.ts  global-setup.ts  helpers.ts  invite.spec.ts  oidc-errors.spec.ts  oidc-grant-disclosure.spec.ts  oidc-policy-selection.spec.ts  oidc-token-security.spec.ts  oidc.spec.ts  shares.spec.ts
apps/minister/prisma/: schema.prisma
apps/minister/scripts/: boot-migrate.ts  count-users.ts  make-admin.ts  publish-status-lists.ts  recompute-stats.ts  seed-client.ts  seed-sybil-config.ts  set-anon-app-id.ts
apps/minister/src/: auth.config.test.ts  auth.config.ts  auth.ts  env.ts  instrumentation.ts  middleware.ts
apps/minister/src/app/: globals.css  layout.tsx  page.tsx
apps/tessera/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/tessera/e2e/: account.spec.ts  admin.spec.ts  auth.setup.ts  auth.spec.ts  env.ts  global-setup.ts  helpers.ts  invite.spec.ts  oidc-errors.spec.ts  oidc.spec.ts
apps/tessera/prisma/: schema.prisma
apps/tessera/scripts/: make-admin.ts  seed-client.ts
apps/tessera/src/: auth.config.ts  auth.ts  env.ts  middleware.ts
docs/: contact-channels-design.md  email-setup.md  groups-design.md  groups-revocation-design.md  identity-secrets-problem.md  kms-signing.md  oidc-privacy.md  status.md  tlsn-classic-deploy.md
docs/plans/: 2026-07-12-lines-slice1-relay-core.md
docs/specs/: 2026-06-16-account-assurance-recovery.md  2026-07-11-anti-sybil-phase1-implementation.md  2026-07-11-anti-sybil-phase2-implementation.md  2026-07-11-anti-sybil-score-and-badge-stats.md
services/notary/: Dockerfile  README.md
services/tlsn-verifier/: Cargo.toml  Dockerfile  README.md
services/tlsn-verifier/src/: main.rs  tlsn.rs
services/ws-proxy/: .gitignore  Dockerfile  README.md  config.go  config_test.go  go.mod  limiter.go  limiter_test.go  main.go  proxy.go  proxy_test.go
signet-e2e/: .gitignore  README.md  down.sh  up.sh
signet-e2e/fixture/: Cargo.toml
signet-e2e/fixture/src/: main.rs
(+475 files in other folders)
