[package]
name = "minister-tlsn-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "minister-tlsn-verifier"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"

# Real presentation verification. The extension produces a
# `tlsn_core::presentation::Presentation` (bincode-serialized, then base64
# for our wire), and the notary co-signs it. `Presentation::verify` is the
# right entry point for the offline notary+presentation model we run — NOT
# the `tlsn-verifier` crate, which implements the *interactive* MPC-verifier
# role (verifier == notary, no separate presentation). Pinned to the same
# tag as the notary-server image (services/notary: v0.1.0-alpha.11) so the
# serialization + attestation formats match.
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.11" }
# bincode 1.3 is what tlsn uses to (de)serialize presentations; the wire
# format must match exactly.
bincode = "1.3"
hex = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
